--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
+    "flatpickr": "^4.6.13",
     "js-cookie": "^3.0.5",
     "react": "^19.1.1",
     "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
+    "react-flatpickr": "^4.0.11",
     "react-router-dom": "^7.8.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
