--- a/backend/composer.json
+++ b/backend/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^4.2",
         "laravel/tinker": "^2.10.1",
         "mongodb/laravel-mongodb": "^5.5",
+        "socialiteproviders/google": "4.1",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
