--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
     "@schedule-x/events-service": "^3.2.0",
     "@schedule-x/react": "^3.1.0",
     "@schedule-x/theme-default": "^3.2.0",
+    "date-fns": "^4.1.0",
+    "react": "^18.2.0",
     "react-calendar": "^6.0.0",
+    "react-datepicker": "^8.7.0",
+    "react-dom": "^18.2.0",
     "temporal-polyfill": "^0.3.0"
   }
 }
