--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^4.1.0",
     "flatpickr": "^4.6.13",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
@@ -20,7 +21,6 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
-    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,7 +33,6 @@
       "react-app",
       "react-app/jest"
     ]
-
   },
   "browserslist": {
     "production": [
@@ -52,6 +51,4 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
   }
- 
-
 }
